more background updates

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -2292,6 +2292,8 @@ continuum survey of the entire Southern sky at 1.3GHz, extending as far North as
 	shorttitle = {Radio {Galaxy} {Zoo}},
 	url = {http://adsabs.harvard.edu/abs/2019AJ....157..126G},
 	doi = {10.3847/1538-3881/aaff62},
+	abstract = {We study the impact of cluster environment on the morphology of a sample of 4304 extended radio galaxies from Radio Galaxy Zoo. A total of 87\% of the sample lies within a projected 15 Mpc of an optically identified cluster. Brightest cluster galaxies (BCGs) are more likely than other cluster members to be radio sources, and are also moderately bent. The surface density as a function of separation from cluster center of non-BCG radio galaxies follows a power law with index -1.10 ±
+0.03 out to 10 r 500 (∼7 Mpc), which is steeper than the corresponding distribution for optically selected galaxies. Non-BCG radio galaxies are statistically more bent the closer they are to the cluster center. Within the inner 1.5 r 500 (∼1 Mpc) of a cluster, non-BCG radio galaxies are statistically more bent in high-mass clusters than in low-mass clusters. Together, we find that non-BCG sources are statistically more bent in environments that exert greater ram pressure. We use the orientation of bent radio galaxies as an indicator of galaxy orbits and find that they are preferentially in radial orbits. Away from clusters, there is a large population of bent radio galaxies, limiting their use as cluster locators; however, they are still located within statistically overdense regions. We investigate the asymmetry in the tail length of sources that have their tails aligned along the radius vector from the cluster center, and find that the length of the inward-pointing tail is weakly suppressed for sources close to the center of the cluster.},
 	urldate = {2020-07-13},
 	journal = {The Astronomical Journal},
 	author = {Garon, Avery F. and Rudnick, Lawrence and Wong, O. Ivy and Jones, Tom W. and Kim, Jin-Ah and Andernach, Heinz and Shabala, Stanislav S. and Kapińska, Anna D. and Norris, Ray P. and de Gasperin, Francesco and Tate, Jean and Tang, Hongming},
@@ -2896,7 +2898,7 @@ development. The package documentation is available at https://astrodash.readthe
 	author = {Ma, Yik Ki and Mao, S. A. and Stil, Jeroen and Basu, Aritra and West, Jennifer and Heiles, Carl and Hill, Alex S. and Betti, S. K.},
 	month = aug,
 	year = {2019},
-	keywords = {galaxies: active, galaxies: magnetic fields, ISM: magnetic fields, radio continuum: galaxies},
+	keywords = {galaxies: active, ISM: magnetic fields, radio continuum: galaxies, galaxies: magnetic fields},
 	pages = {3432--3453},
 	file = {Full Text:C\:\\Users\\matthew\\Zotero\\storage\\EZRPZCB8\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\QQ6F5IIR\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\LIA7T2GF\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\5BANF2LS\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:C\:\\Users\\matthew\\Zotero\\storage\\WHDMH4FS\\Ma et al. - 2019 - A broad-band spectro-polarimetric view of the NVSS.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\3VFHDLX2\\2019MNRAS.487.html:text/html;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\WWSPJVKX\\5490375.html:text/html}
 }
@@ -3460,7 +3462,7 @@ Publisher: Nature Publishing Group},
 	year = {2018},
 	note = {Number: 1
 Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {galaxies: active, galaxies: individual (3C 273), galaxies: jets, radio continuum: galaxies, techniques: high angular resolution, techniques: interferometric},
+	keywords = {galaxies: active, radio continuum: galaxies, techniques: interferometric, galaxies: jets, galaxies: individual (3C 273), techniques: high angular resolution},
 	pages = {15},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\6ICB98KH\\Akiyama et al. - 2018 - The Global Jet Structure of the Archetypical Quasa.pdf:application/pdf;Snapshot:C\:\\Users\\matthew\\Zotero\\storage\\BDSV466F\\htm.html:text/html}
 }
@@ -3497,7 +3499,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	month = feb,
 	year = {2019},
 	note = {arXiv: 1811.05383},
-	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
 	pages = {259},
 	file = {Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:C\:\\Users\\matthew\\Zotero\\storage\\BCTXNPGM\\Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:application/pdf}
 }
@@ -3517,7 +3519,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	month = feb,
 	year = {2019},
 	note = {arXiv: 1811.05383},
-	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
 	pages = {259},
 	file = {Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:C\:\\Users\\matthew\\Zotero\\storage\\827CFAH5\\Garofalo and Singh - 2019 - FR0 radio galaxies and their place in the radio mo.pdf:application/pdf}
 }
@@ -3540,7 +3542,7 @@ substantial extended emission confined within the spatial resolution limit. The 
 	author = {Capetti, A. and Brienza, M. and Baldi, R. D. and Giovannini, G. and Morganti, R. and Hardcastle, M. J. and Rottgering, H. J. A. and Brunetti, G. F. and Best, P. N. and Miley, G.},
 	month = oct,
 	year = {2020},
-	keywords = {cD, galaxies: active, galaxies: elliptical and lenticular, galaxies: jets},
+	keywords = {galaxies: active, galaxies: jets, cD, galaxies: elliptical and lenticular},
 	pages = {A107},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\BQWL32BM\\Capetti et al. - 2020 - The LOFAR view of FR 0 radio galaxies.pdf:application/pdf}
 }
@@ -3909,7 +3911,7 @@ list of sources as Compact or Extended (FRI, FRII, and BENT).},
 	author = {Alhassan, Wathela and Taylor, A. R. and Vaccari, Mattia},
 	month = oct,
 	year = {2018},
-	keywords = {galaxies: evolution, radio continuum: galaxies},
+	keywords = {radio continuum: galaxies, galaxies: evolution},
 	pages = {2085--2093},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\QNBA6FME\\Alhassan et al. - 2018 - The FIRST Classifier compact and extended radio g.pdf:application/pdf}
 }
@@ -3928,7 +3930,7 @@ interferometric data, is the presence of noise and the lack of a sufficiently la
 	author = {Gheller, C. and Vazza, F. and Bonafede, A.},
 	month = nov,
 	year = {2018},
-	keywords = {galaxies: clusters: general, intergalactic medium, large-scale structure of Universe, methods: numerical},
+	keywords = {intergalactic medium, methods: numerical, galaxies: clusters: general, large-scale structure of Universe},
 	pages = {3749--3761},
 	file = {Full Text:C\:\\Users\\matthew\\Zotero\\storage\\R72SV2JQ\\Gheller et al. - 2018 - Deep learning based detection of cosmological diff.pdf:application/pdf}
 }
@@ -3949,7 +3951,7 @@ Convolutional Neutral Networks method. Specifically, we train and test CLARAN on
 	author = {Wu, Chen and Wong, Oiwei Ivy and Rudnick, Lawrence and Shabala, Stanislav S. and Alger, Matthew J. and Banfield, Julie K. and Ong, Cheng Soon and White, Sarah V. and Garon, Avery F. and Norris, Ray P. and Andernach, Heinz and Tate, Jean and Lukic, Vesna and Tang, Hongming and Schawinski, Kevin and Diakogiannis, Foivos I.},
 	month = jan,
 	year = {2019},
-	keywords = {galaxies: active, methods: numerical, methods: statistical, radio continuum: galaxies, techniques: image processing},
+	keywords = {galaxies: active, radio continuum: galaxies, methods: statistical, methods: numerical, techniques: image processing},
 	pages = {1211--1230},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\98IUNGU6\\Wu et al. - 2019 - Radio Galaxy Zoo CLARAN - a deep learning classif.pdf:application/pdf}
 }
@@ -3989,7 +3991,7 @@ separation between FRIs and FRIIs as reported in some previous works.},
 	author = {Ma, Zhixian and Xu, Haiguang and Zhu, Jie and Hu, Dan and Li, Weitian and Shan, Chenxi and Zhu, Zhenghao and Gu, Liyi and Li, Jinjin and Liu, Chengze and Wu, Xiangping},
 	month = feb,
 	year = {2019},
-	keywords = {catalogs, galaxies: statistics, methods: data analysis, radio continuum: galaxies, techniques: miscellaneous},
+	keywords = {radio continuum: galaxies, catalogs, methods: data analysis, techniques: miscellaneous, galaxies: statistics},
 	pages = {34},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\JS8IMKSZ\\Ma et al. - 2019 - A Machine Learning Based Morphological Classificat.pdf:application/pdf}
 }
@@ -4109,7 +4111,7 @@ reducing the impact of noise.},
 	author = {Lukic, V. and Brüggen, M. and Mingo, B. and Croston, J. H. and Kasieczka, G. and Best, P. N.},
 	month = aug,
 	year = {2019},
-	keywords = {instrumentation: miscellaneous, methods: data analysis, methods: miscellaneous, radio continuum: galaxies, radio continuum: general, surveys},
+	keywords = {radio continuum: galaxies, surveys, radio continuum: general, methods: data analysis, instrumentation: miscellaneous, methods: miscellaneous},
 	pages = {1729--1744},
 	file = {Accepted Version:C\:\\Users\\matthew\\Zotero\\storage\\FD9X3SKN\\Lukic et al. - 2019 - Morphological classification of radio galaxies ca.pdf:application/pdf}
 }
@@ -4235,7 +4237,7 @@ radio-source morphologies with putative positions of the host galaxy. This new a
 	author = {Fan, Dongwei and Budavári, Tamás and Norris, Ray P. and Basu, Amitabh},
 	month = aug,
 	year = {2020},
-	keywords = {catalogues, methods: statistical, surveys},
+	keywords = {surveys, methods: statistical, catalogues},
 	pages = {565--573},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\5ZSUK8DM\\Fan et al. - 2020 - Optimal probabilistic catalogue matching for radio.pdf:application/pdf}
 }
@@ -4290,7 +4292,7 @@ radio-source morphologies with putative positions of the host galaxy. This new a
 	author = {Proctor, D. D.},
 	month = jun,
 	year = {2011},
-	keywords = {astronomical databases: miscellaneous, catalogs, galaxies: general, methods: data analysis, methods: statistical, techniques: image processing},
+	keywords = {methods: statistical, astronomical databases: miscellaneous, catalogs, galaxies: general, methods: data analysis, techniques: image processing},
 	pages = {31},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\Z66RZBCH\\Proctor - 2011 - Morphological Annotations for Groups in the First .pdf:application/pdf}
 }
@@ -4328,7 +4330,7 @@ brute-force dedispersion, but the low signal-to-noise per pixel makes such a cla
 	author = {Connor, Liam and van Leeuwen, Joeri},
 	month = dec,
 	year = {2018},
-	keywords = {methods: data analysis, pulsars: general, techniques: image processing},
+	keywords = {methods: data analysis, techniques: image processing, pulsars: general},
 	pages = {256},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\NSXDSWAS\\Connor and van Leeuwen - 2018 - Applying Deep Learning to Fast Radio Burst Classif.pdf:application/pdf}
 }
@@ -4348,7 +4350,7 @@ astronomical images.},
 	author = {Vafaei Sadr, A. and Vos, Etienne E. and Bassett, Bruce A. and Hosenie, Zafiirah and Oozeer, N. and Lochner, Michelle},
 	month = apr,
 	year = {2019},
-	keywords = {methods: data analysis, methods: observational, techniques: image processing},
+	keywords = {methods: data analysis, techniques: image processing, methods: observational},
 	pages = {2793--2806},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\VYY6PNSN\\Vafaei Sadr et al. - 2019 - DEEPSOURCE point source detection using deep lear.pdf:application/pdf}
 }
@@ -4429,7 +4431,7 @@ candidate classification.},
 	author = {Agarwal, Devansh and Aggarwal, Kshitij and Burke-Spolaor, Sarah and Lorimer, Duncan R. and Garver-Daniels, Nathaniel},
 	month = jun,
 	year = {2020},
-	keywords = {fast radio bursts, methods: data analysis, pulsars: general},
+	keywords = {methods: data analysis, pulsars: general, fast radio bursts},
 	pages = {1661--1674},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\85AZ2DX6\\Agarwal et al. - 2020 - FETCH A deep-learning based classifier for fast t.pdf:application/pdf}
 }
@@ -4446,7 +4448,7 @@ candidate classification.},
 	author = {Lin, Haitao and Li, Xiangru and Zeng, Qingguo},
 	month = aug,
 	year = {2020},
-	keywords = {1306, 1858, 1938, Astronomy data analysis, Convolutional neural networks, Pulsars},
+	keywords = {Convolutional neural networks, 1306, 1858, 1938, Astronomy data analysis, Pulsars},
 	pages = {104},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\IWE7DKVR\\Lin et al. - 2020 - Pulsar Candidate Sifting Using Multi-input Convolu.pdf:application/pdf}
 }
@@ -4463,7 +4465,7 @@ candidate classification.},
 	author = {Zhang, C. and Wang, C. and Hobbs, G. and Russell, C. J. and Li, D. and Zhang, S.-B. and Dai, S. and Wu, J.-W. and Pan, Z.-C. and Zhu, W.-W. and Toomey, L. and Ren, Z.-Y.},
 	month = oct,
 	year = {2020},
-	keywords = {methods: data analysis, methods: numerical, methods: statistical, pulsars: general, techniques: image processing},
+	keywords = {methods: statistical, methods: data analysis, methods: numerical, techniques: image processing, pulsars: general},
 	pages = {A26},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\YS2E52JF\\Zhang et al. - 2020 - Applying saliency-map analysis in searches for pul.pdf:application/pdf}
 }
@@ -4495,7 +4497,7 @@ discriminative learning to train the model rapidly. We achieve a classification 
 	month = dec,
 	year = {2020},
 	note = {arXiv: 2012.01248},
-	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Artificial Intelligence, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning},
+	keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning, Computer Science - Artificial Intelligence},
 	file = {Bowles et al. - 2020 - Attention-gating for improved radio galaxy classif.pdf:C\:\\Users\\matthew\\Zotero\\storage\\PRND5SFH\\Bowles et al. - 2020 - Attention-gating for improved radio galaxy classif.pdf:application/pdf}
 }
 
@@ -4592,7 +4594,7 @@ Tables A1-A4 are only available at the CDS via anonymous ftp to http://cdsarc.u-
 	author = {Dabhade, P. and Mahato, M. and Bagchi, J. and Saikia, D. J. and Combes, F. and Sankhyayan, S. and Röttgering, H. J. A. and Ho, L. C. and Gaikwad, M. and Raychaudhury, S. and Vaidya, B. and Guiderdoni, B.},
 	month = oct,
 	year = {2020},
-	keywords = {galaxies: active, galaxies: clusters: general, galaxies: jets, quasars: general, radio continuum: galaxies},
+	keywords = {galaxies: active, radio continuum: galaxies, galaxies: jets, quasars: general, galaxies: clusters: general},
 	pages = {A153},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\6KJMGBJT\\Dabhade et al. - 2020 - Search and analysis of giant radio galaxies with a.pdf:application/pdf}
 }
@@ -4633,7 +4635,7 @@ determination of broadband spectral parameters (as the synchrotron
 	author = {Arsioli, B. and Dedin, P.},
 	month = aug,
 	year = {2020},
-	keywords = {galaxies: active, methods: data analysis, methods: statistical, radiation mechanisms: non-thermal},
+	keywords = {galaxies: active, methods: statistical, methods: data analysis, radiation mechanisms: non-thermal},
 	pages = {1750--1764},
 	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\SI738X6B\\Arsioli and Dedin - 2020 - Machine learning applied to multifrequency data in.pdf:application/pdf}
 }
@@ -4755,7 +4757,7 @@ these GRGs have sizes ≥2 Mpc, which is a rarity. Here, for the first time, we 
 	author = {Dabhade, Pratik and Gaikwad, Madhuri and Bagchi, Joydeep and Pandey-Pommier, M. and Sankhyayan, Shishir and Raychaudhury, Somak},
 	month = aug,
 	year = {2017},
-	keywords = {galaxies: active, galaxies: jets, galaxies: nuclei, infrared: galaxies, intergalactic medium, quasars: supermassive black holes},
+	keywords = {galaxies: active, quasars: supermassive black holes, galaxies: jets, galaxies: nuclei, infrared: galaxies, intergalactic medium},
 	pages = {2886--2906},
 	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\V5GHM9LT\\Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:application/pdf}
 }
@@ -4777,4 +4779,140 @@ these GRGs have sizes ≥2 Mpc, which is a rarity. Here, for the first time, we 
 	year = {2017},
 	pages = {2886--2906},
 	file = {Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:C\:\\Users\\matthew\\Zotero\\storage\\8DPMGCWZ\\Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:application/pdf}
+}
+
+@book{thompson_interferometry_2017-1,
+	address = {Cham},
+	series = {Astronomy and {Astrophysics} {Library}},
+	title = {Interferometry and {Synthesis} in {Radio} {Astronomy}},
+	isbn = {978-3-319-44429-1 978-3-319-44431-4},
+	url = {http://link.springer.com/10.1007/978-3-319-44431-4},
+	language = {en},
+	urldate = {2020-12-10},
+	publisher = {Springer International Publishing},
+	author = {Thompson, A. Richard and Moran, James M. and Swenson, George W.},
+	year = {2017},
+	doi = {10.1007/978-3-319-44431-4},
+	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\BQMLJHKA\\Thompson et al. - 2017 - Interferometry and Synthesis in Radio Astronomy.pdf:application/pdf}
+}
+
+@article{galvin_cataloguing_2020-1,
+	title = {Cataloguing the radio-sky with unsupervised machine learning: a new approach for the {SKA} era},
+	volume = {497},
+	issn = {0035-8711},
+	shorttitle = {Cataloguing the radio-sky with unsupervised machine learning},
+	url = {http://adsabs.harvard.edu/abs/2020MNRAS.497.2730G},
+	doi = {10.1093/mnras/staa1890},
+	abstract = {We develop a new analysis approach towards identifying related radio 
+components and their corresponding infrared host galaxy based on
+unsupervised machine learning methods. By exploiting Parallelized
+rotation and flipping INvariant Kohonen maps (PINK), a self-organizing
+map (SOM) algorithm, we are able to associate radio and infrared sources
+without the a priori requirement of training labels. We present an
+example of this method using 894 415 images from the Faint Images of the
+Radio-Sky at Twenty centimeters (FIRST) and Wide-field Infrared Survey
+Explorer (WISE) surveys centred towards positions described by the FIRST
+catalogue. We produce a set of catalogues that complement FIRST and
+describe 802 646 objects, including their radio components and their
+corresponding AllWISE infrared host galaxy. Using these data products,
+we (i) demonstrate the ability to identify objects with rare and unique
+radio morphologies (e.g. 'X'-shaped galaxies, hybrid FR I/FR II
+morphologies), (ii) can identify the potentially resolved radio
+components that are associated with a single infrared host, (iii)
+introduce a 'curliness' statistic to search for bent and disturbed radio
+morphologies, and (iv) extract a set of 17 giant radio galaxies between
+700 and 1100 kpc. As we require no training labels, our method can be
+applied to any radio-continuum survey, provided a sufficiently
+representative SOM can be trained.},
+	urldate = {2020-12-14},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Galvin, T. J. and Huynh, M. T. and Norris, R. P. and Wang, X. R. and Hopkins, E. and Polsterer, K. and Ralph, N. O. and O'Brien, A. N. and Heald, G. H.},
+	month = jul,
+	year = {2020},
+	keywords = {radio continuum: galaxies, methods: statistical, infrared: galaxies},
+	pages = {2730--2758},
+	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\WCSG3L9H\\Galvin et al. - 2020 - Cataloguing the radio-sky with unsupervised machin.pdf:application/pdf}
+}
+
+@article{white_gleam_2020-4,
+	title = {The {GLEAM} 4-{Jy} ({G4Jy}) {Sample}: {I}. {Definition} and the catalogue},
+	volume = {37},
+	issn = {1323-3580},
+	shorttitle = {The {GLEAM} 4-{Jy} ({G4Jy}) {Sample}},
+	url = {http://adsabs.harvard.edu/abs/2020PASA...37...18W},
+	doi = {10.1017/pasa.2020.9},
+	abstract = {The Murchison Widefield Array (MWA) has observed the entire southern sky (Declination, \$δ{\textless} 30{\textasciicircum}\{{\textbackslash}circ\}\$ ) at low radio frequencies, over
+the range 72-231MHz. These observations constitute the GaLactic and Extragalactic All-sky MWA (GLEAM) Survey, and we use the extragalactic catalogue (EGC) (Galactic latitude, \${\textbar}b{\textbar} {\textgreater}10{\textasciicircum}\{{\textbackslash}circ\}\$ ) to define the GLEAM 4-Jy (G4Jy) Sample. This is a complete sample of the `brightest' radio sources ( \$S\_\{{\textbackslash}textrm\{151 MHz\}\}{\textgreater}4 Jy\$ ), the majority of which are active galactic nuclei with powerful radio jets. Crucially,
+low-frequency observations allow the selection of such sources in an orientation-independent way (i.e. minimising the bias caused by Doppler boosting, inherent in high-frequency surveys). We then use
+higher-resolution radio images, and information at other wavelengths, to morphologically classify the brightest components in GLEAM. We also conduct cross-checks against the literature and perform internal matching, in order to improve sample completeness (which is estimated to be \${\textgreater}95.5\$ \%). This results in a catalogue of 1863 sources, making the G4Jy Sample over 10 times larger than that of the revised Third Cambridge Catalogue of Radio Sources (3CRR; \$S\_\{\vphantom{\}}{\textbackslash}textrm\{\vphantom{\}}178
+MHz\vphantom{\{}\}\vphantom{\{}\}{\textgreater}10.9 Jy\$ ). Of these G4Jy sources, 78 are resolved by the MWA (Phase-I) synthesised beam ( \$∼2\$ arcmin at 200MHz), and we label 67\% of the sample as `single', 26\% as `double', 4\% as `triple', and 3\% as having `complex' morphology at \$∼1 GHz\$ (45 arcsec resolution). We characterise the spectral behaviour of these objects in the radio and find that the median spectral index is \$α=-0.740 ± 0.012\$
+between 151 and 843MHz, and \$α=-0.786 ± 0.006\$ between
+151MHz and 1400MHz (assuming a power-law description, \$S\_\{ν\} ∝
+ν{\textasciicircum}\{α\}\$ ), compared to \$α=-0.829 ± 0.006\$ within
+the GLEAM band. Alongside this, our value-added catalogue provides mid-infrared source associations (subject to 6" resolution at 3.4 \$μ\$ m) for the radio emission, as identified through visual inspection and thorough checks against the literature. As such, the G4Jy Sample can be used as a reliable training set for cross-identification via
+machine-learning algorithms. We also estimate the angular size of the sources, based on their associated components at \$∼1 GHz\$ , and
+perform a flux density comparison for 67 G4Jy sources that overlap with 3CRR. Analysis of multi-wavelength data, and spectral curvature between 72MHz and 20GHz, will be presented in subsequent papers, and details for accessing all G4Jy overlays are provided at https://github.com/svw26/G4Jy.},
+	urldate = {2020-12-14},
+	journal = {Publications of the Astronomical Society of Australia},
+	author = {White, Sarah V. and Franzen, Thomas M. O. and Riseley, Chris J. and Wong, O. Ivy and Kapińska, Anna D. and Hurley-Walker, Natasha and Callingham, Joseph R. and Thorat, Kshitij and Wu, Chen and Hancock, Paul and Hunstead, Richard W. and Seymour, Nick and Swan, Jesse and Wayth, Randall and Morgan, John and Chhetri, Rajan and Jackson, Carole and Weston, Stuart and Bell, Martin and For, Bi-Qing and Gaensler, B. M. and Johnston-Hollitt, Melanie and Offringa, André and Staveley-Smith, Lister},
+	month = jun,
+	year = {2020},
+	keywords = {catalogues, galaxies: active, galaxies: evolution, radio continuum: galaxies},
+	pages = {e018},
+	file = {Submitted Version:C\:\\Users\\matthew\\Zotero\\storage\\SIBPR4NB\\White et al. - 2020 - The GLEAM 4-Jy (G4Jy) Sample I. Definition and th.pdf:application/pdf}
+}
+
+@article{dabhade_discovery_2017-2,
+	title = {Discovery of giant radio galaxies from {NVSS}: radio and infrared properties},
+	volume = {469},
+	issn = {0035-8711},
+	shorttitle = {Discovery of giant radio galaxies from {NVSS}},
+	url = {http://adsabs.harvard.edu/abs/2017MNRAS.469.2886D},
+	doi = {10.1093/mnras/stx860},
+	abstract = {Giant radio galaxies (GRGs) are one of the largest astrophysical sources in the Universe with an overall projected linear size of ∼0.7 Mpc or more. The last six decades of radio astronomy research has led to the detection of thousands of radio galaxies. However, only ∼300 of them can be classified as GRGs. The reasons behind their large size and rarity are unknown. We carried out a systematic search for these radio giants and found a large sample of GRGs. In this paper, we report the discovery of 25 GRGs from the National Radio Astronomy Observatory Very Large Array Sky Survey, in the red-shift range z ∼ 0.07 to 0.67. Their physical sizes range from ∼0.8 Mpc to ∼4 Mpc. Eight of
+these GRGs have sizes ≥2 Mpc, which is a rarity. Here, for the first time, we investigate the mid-infrared (IR) properties of the optical hosts of the GRGs and classify them securely into various active galactic nuclei types using the WISE mid-IR colours. Using radio and IR data, four of the hosts of the GRGs were observed to be radio-loud quasars that extend up to 2 Mpc in radio size. These GRGs missed detection in earlier searches possibly because of their highly diffuse nature, low surface brightness and lack of optical data. The new GRGs are a significant addition to the existing sample. They will contribute to a better understanding of the physical properties of radio giants.},
+	urldate = {2020-12-15},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Dabhade, Pratik and Gaikwad, Madhuri and Bagchi, Joydeep and Pandey-Pommier, M. and Sankhyayan, Shishir and Raychaudhury, Somak},
+	month = aug,
+	year = {2017},
+	keywords = {galaxies: active, galaxies: jets, galaxies: nuclei, infrared: galaxies, intergalactic medium, quasars: supermassive black holes},
+	pages = {2886--2906},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\9F3E8582\\Dabhade et al. - 2017 - Discovery of giant radio galaxies from NVSS radio.pdf:application/pdf}
+}
+
+@article{proctor_selection_2016,
+	title = {A {Selection} of {Giant} {Radio} {Sources} from {NVSS}},
+	volume = {224},
+	issn = {0067-0049},
+	url = {http://adsabs.harvard.edu/abs/2016ApJS..224...18P},
+	doi = {10.3847/0067-0049/224/2/18},
+	abstract = {Results of the application of pattern-recognition techniques to the problem of identifying giant radio sources (GRSs) from the data in the NVSS catalog are presented, and issues affecting the process are explored. Decision-tree pattern-recognition software was applied to training-set source pairs developed from known NVSS large-angular-size radio galaxies. The full training set consisted of 51,195 source pairs, 48 of which were known GRSs for which each lobe was primarily
+represented by a single catalog component. The source pairs had a maximum separation of 20{\textbackslash}prime and a minimum component area of 1.87 square arcmin at the 1.4 mJy level. The importance of comparing the resulting probability distributions of the training and application sets for cases of unknown class ratio is demonstrated. The probability of correctly ranking a randomly selected (GRS, non-GRS) pair from the best of the tested classifiers was determined to be 97.8 ± 1.5\%. The best classifiers were applied to the over 870,000 candidate pairs from the entire catalog. Images of higher-ranked sources were visually screened, and a table of over 1600 candidates, including morphological annotation, is presented. These systems include doubles and triples, wide-angle tail and narrow-angle tail, S- or Z-shaped systems, and core-jets and resolved cores. While some resolved-lobe systems are recovered with this technique, generally it is expected that such systems would require a different approach.},
+	urldate = {2020-12-15},
+	journal = {The Astrophysical Journal Supplement Series},
+	author = {Proctor, D. D.},
+	month = jun,
+	year = {2016},
+	keywords = {astronomical databases: miscellaneous, catalogs, galaxies: general},
+	pages = {18},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\ZBY23PF6\\Proctor - 2016 - A Selection of Giant Radio Sources from NVSS.pdf:application/pdf}
+}
+
+@article{fan_optimal_2020-2,
+	title = {Optimal probabilistic catalogue matching for radio sources},
+	volume = {498},
+	issn = {0035-8711},
+	url = {http://adsabs.harvard.edu/abs/2020MNRAS.498..565F},
+	doi = {10.1093/mnras/staa2447},
+	abstract = {Cross-matching catalogues from radio surveys to catalogues of sources at other wavelengths is extremely hard, because radio sources are often extended, often consist of several spatially separated components, and often no radio component is coincident with the optical/infrared host galaxy. Traditionally, the cross-matching is done by eye, but this does not scale to the millions of radio sources expected from the next generation of radio surveys. We present an innovative automated
+procedure, using Bayesian hypothesis testing, that models trial
+radio-source morphologies with putative positions of the host galaxy. This new algorithm differs from an earlier version by allowing more complex radio-source morphologies, and performing a simultaneous fit over a large field. We show that this technique performs well in an unsupervised mode.},
+	urldate = {2020-12-15},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Fan, Dongwei and Budavári, Tamás and Norris, Ray P. and Basu, Amitabh},
+	month = aug,
+	year = {2020},
+	keywords = {catalogues, methods: statistical, surveys},
+	pages = {565--573}
 }
